[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pqthreads"
version = "0.6.0"
description = "Expose class interfaces from the main GUI Thread in another QThread in Qt for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sietze van Buuren", email = "s.van.buuren@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://github.com/swvanbuuren/pqthreads" }
dependencies = [
    "pyside6>=6.10.1",
    "wrapt>=2.0.1",
]

[dependency-groups]
dev = [
  "pylint",
  "pytest",
]

[tool.setuptools.packages.find]
include = ["pqthreads", "pqthreads.*"]

[tool.semantic_release]
version_variables = ["pqthreads/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog]
template_dir = ".github/templates"

[tool.pytest.ini_options]
addopts = "-v -s"
